--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
-    "formidable": "^3.5.1"
+    "formidable": "^3.5.1",
+    "nodemon": "^3.1.3",
+    "uuid": "^10.0.0"
   }
 }
