--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "formidable": "^3.5.1",
+    "method-override": "^3.0.0",
     "nodemon": "^3.1.3",
     "uuid": "^10.0.0"
   }
